--- a/app/src/main/res/layout/add_discipline.xml
+++ b/app/src/main/res/layout/add_discipline.xml
@@ -22,50 +22,48 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Name:"
-        android:id="@+id/txtName"
-        android:layout_alignTop="@+id/editText"
+        android:id="@+id/labelDisciplineName"
+        android:layout_below="@+id/labelHome"
         android:layout_alignParentStart="true" />
 
     <EditText
         android:layout_width="185dp"
-        android:layout_height="22dp"
-        android:id="@+id/editText"
-        android:layout_below="@+id/labelHome"
-        android:layout_toEndOf="@+id/txtName"
-        android:layout_marginTop="16dp" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add"
-        android:id="@+id/btnAddStudent"
-        android:layout_alignBottom="@+id/editText2"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="32dp" />
-
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/studentDisciplines"
-        android:layout_marginTop="31dp"
-        android:layout_below="@+id/btnAddStudent"
-        android:layout_alignParentStart="true"
-        android:choiceMode="singleChoice" />
+        android:layout_height="38dp"
+        android:id="@+id/txtDisciplineName"
+        android:layout_alignTop="@+id/labelDisciplineName"
+        android:layout_toEndOf="@+id/labelDisciplineName" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Grade:"
-        android:id="@+id/txtGrade"
-        android:layout_below="@+id/editText"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="22dp" />
+        android:id="@+id/labelDisciplineGrade"
+        android:layout_below="@+id/btnAddDiscipline"
+        android:layout_alignParentStart="true" />
 
     <EditText
         android:layout_width="185dp"
-        android:layout_height="22dp"
-        android:id="@+id/editText2"
-        android:layout_alignBottom="@+id/txtGrade"
-        android:layout_toEndOf="@+id/txtGrade" />
+        android:layout_height="38dp"
+        android:id="@+id/txtGrade"
+        android:layout_below="@+id/txtDisciplineName"
+        android:layout_toEndOf="@+id/labelDisciplineGrade" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ADD"
+        android:id="@+id/btnAddDiscipline"
+        android:layout_marginEnd="20dp"
+        android:layout_alignTop="@+id/txtDisciplineName"
+        android:layout_alignParentEnd="true" />
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/studentDisciplineList"
+        android:layout_below="@+id/btnAddDiscipline"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="100dp" />
+
 </RelativeLayout>
